--- a/templates/Home.html
+++ b/templates/Home.html
@@ -58,11 +58,12 @@
                 <ul class="u-nav u-unstyled u-nav-1">
                     <li class="u-nav-item"><a
                             class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                            href="#" style="padding: 10px 20px;">Open</a>
+                            href="" style="padding: 10px 20px;">Open</a>
+                            
                     </li>
                     <li class="u-nav-item"><a
                             class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                            href="Test.html" style="padding: 10px 20px;">Test</a>
+                            href="{% static "Test.html" %}" style="padding: 10px 20px;">Test</a>
                     </li>
                     <li class="u-nav-item"><a
                             class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
@@ -113,6 +114,7 @@
         <a href="#" class="u-btn u-button-style u-palette-2-base u-btn-1">Read More</a>
     </div>
 </section>
+
 
 
 <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-feb1">
